--- a/mobile/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/mobile/src/main/res/drawable/ic_launcher_foreground.xml
@@ -5,19 +5,19 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <group
-        android:scaleX="0.93"
-        android:scaleY="0.93"
-        android:translateX="3.78"
-        android:translateY="3.78">
+        android:scaleX="0.94"
+        android:scaleY="0.94"
+        android:translateX="3.24"
+        android:translateY="3.24">
         <path
             android:fillColor="#1E5128"
-            android:pathData="M32.43,40.14h47.5V56a17,17 0,0 1,-17 17h-30.5V40.14Z" />
-        <path android:pathData="M28,47a12,12 0,0 1,12 -12h35.5v20.86a12,12 0,0 1,-12 12H28V47Z">
+            android:pathData="M32,38h49v22a15,15 0,0 1,-15 15H32V38Z" />
+        <path android:pathData="M27,44a11,11 0,0 1,11 -11h38v26a11,11 0,0 1,-11 11H27V44Z">
             <aapt:attr name="android:fillColor">
                 <gradient
-                    android:centerX="13.67"
-                    android:centerY="7.28"
-                    android:gradientRadius="123.76"
+                    android:centerX="12.22"
+                    android:centerY="1.79"
+                    android:gradientRadius="134.53"
                     android:type="radial">
                     <item
                         android:color="#FF9DD49E"
@@ -28,8 +28,21 @@
                 </gradient>
             </aapt:attr>
         </path>
-        <path
-            android:fillColor="#9DD49E"
-            android:pathData="M59.98,54.42a5.13,5.13 0,0 1,-3.2 4.83,3.49 3.49,0 0,1 -3.5,3.47h-0.71v-2.61h-0.25c-0.53,0 -1.02,-0.03 -1.48,-0.08v2.69h-4.2v-3.71c-0.64,-0.28 -1.21,-0.59 -1.72,-0.93 -0.5,-0.34 -0.88,-0.66 -1.16,-0.95l0.7,-1.1a8.31,8.31 0,0 0,2.17 1.44v-4.34a6.32,6.32 0,0 1,-2.2 -2,5 5,0 0,1 -0.76,-2.71c0,-0.96 0.24,-1.84 0.72,-2.64a5.36,5.36 0,0 1,2.1 -1.98,3.66 3.66,0 0,1 3.66,-3.66h0.54v2.61h0.36c0.53,0 1.03,0.03 1.5,0.08v-2.69h4.2v3.76c0.52,0.24 0.99,0.5 1.4,0.78 0.4,0.28 0.72,0.54 0.95,0.78l-0.72,1.1a7,7 0,0 0,-1.63 -1.12v4.27a6.12,6.12 0,0 1,2.41 1.93c0.55,0.76 0.82,1.69 0.82,2.78ZM52.21,44.29a3.6,3.6 0,0 0,-2.05 0.49c-0.46,0.3 -0.7,0.74 -0.7,1.3 0,0.41 0.18,0.79 0.53,1.11 0.35,0.31 1.02,0.62 2,0.93l0.56,0.17v-4h-0.34ZM50.84,58.45c0.83,0 1.45,-0.14 1.88,-0.42 0.42,-0.27 0.63,-0.66 0.63,-1.17 0,-0.88 -0.75,-1.56 -2.26,-2.05l-0.25,-0.1v3.74Z" />
+        <path android:pathData="M60.27,55.48c0,1.22 -0.3,2.32 -0.87,3.3a6.13,6.13 0,0 1,-2.53 2.27,4.02 4.02,0 0,1 -4.02,4h-0.43v-3.01h-0.27c-0.55,0 -1.08,-0.03 -1.57,-0.08v3.1h-4.45v-4.29c-0.67,-0.32 -1.27,-0.67 -1.81,-1.07 -0.52,-0.4 -0.93,-0.76 -1.23,-1.1l0.74,-1.26c0.6,0.62 1.36,1.17 2.3,1.66v-5.02A6.09,6.09 0,0 1,43 48.54a6.14,6.14 0,0 1,2.97 -5.32c0,-2.33 1.9,-4.22 4.23,-4.22h0.23v3.01h0.38c0.56,0 1.1,0.03 1.58,0.09L52.39,39h4.46v4.34c0.55,0.28 1.04,0.58 1.47,0.9 0.43,0.32 0.77,0.62 1,0.9l-0.75,1.27c-0.43,-0.45 -1,-0.88 -1.72,-1.3v4.93a6.62,6.62 0,0 1,2.55 2.23c0.58,0.88 0.87,1.95 0.87,3.2ZM52.04,43.78a3.6,3.6 0,0 0,-2.17 0.57c-0.5,0.36 -0.74,0.86 -0.74,1.5 0,0.48 0.19,0.91 0.56,1.29 0.37,0.36 1.08,0.71 2.12,1.07l0.58,0.2v-4.62h-0.35ZM50.58,60.12c0.88,0 1.55,-0.16 2,-0.47 0.44,-0.32 0.66,-0.77 0.66,-1.36 0,-1.01 -0.8,-1.8 -2.39,-2.36l-0.27,-0.11v4.3Z">
+            <aapt:attr name="android:fillColor">
+                <gradient
+                    android:centerX="51.63"
+                    android:centerY="65.05"
+                    android:gradientRadius="26.05"
+                    android:type="radial">
+                    <item
+                        android:color="#FFB8F1B9"
+                        android:offset="0" />
+                    <item
+                        android:color="#FFD4E8D0"
+                        android:offset="1" />
+                </gradient>
+            </aapt:attr>
+        </path>
     </group>
 </vector>
