--- a/mobile/src/main/res/drawable/ic_splash.xml
+++ b/mobile/src/main/res/drawable/ic_splash.xml
@@ -5,23 +5,27 @@
     android:viewportWidth="288"
     android:viewportHeight="288">
 
-    <path android:pathData="M153.1,153.1c-5,0 -9.4,-1.7 -12.9,-5.3a17.6,17.6 0,0 1,-5.3 -13c0,-5 1.7,-9.3 5.3,-12.9 3.5,-3.5 7.9,-5.3 13,-5.3a18.1,18.1 0,0 1,18.2 18.3c0,5 -1.8,9.4 -5.3,12.9a17.6,17.6 0,0 1,-13 5.3ZM104.5,174.4c-2.6,0 -4.7,-0.9 -6.5,-2.7a8.8,8.8 0,0 1,-2.7 -6.4v-60.8a9.1,9.1 0,0 1,9.2 -9.2h97.3a9,9 0,0 1,6.4 2.7,9 9,0 0,1 2.7,6.5v60.8c0,2.5 -0.9,4.6 -2.7,6.4a8.8,8.8 0,0 1,-6.4 2.7h-97.3ZM119.7,165.3h66.9c0,-4.3 1.5,-7.9 4.4,-10.8 3,-3 6.5,-4.4 10.8,-4.4v-30.4c-4.3,0 -7.9,-1.5 -10.8,-4.4 -3,-3 -4.4,-6.6 -4.4,-10.8h-67a15,15 0,0 1,-15.1 15.2L104.5,150a15,15 0,0 1,15.2 15.2ZM192.7,183.5c0,5 -4.1,9.2 -9.2,9.2L86.2,192.7a9,9 0,0 1,-6.4 -2.7,8.8 8.8,0 0,1 -2.7,-6.5v-60.8c0,-5 4,-9.1 9.1,-9.1L86.2,176c0,4.2 3.4,7.5 7.5,7.5h99Z">
+    <path
+        android:fillColor="#1E5128"
+        android:pathData="M90.14,105.14h119V160a35,35 0,0 1,-35 35h-84v-89.86Z" />
+
+    <path android:pathData="M78,118a25,25 0,0 1,25 -25h94v64.86a25,25 0,0 1,-25 25H78V118Z">
 
         <aapt:attr name="android:fillColor">
 
             <gradient
-                android:centerX="76.6"
-                android:centerY="96.3"
-                android:gradientRadius="165.08"
+                android:centerX="42.1"
+                android:centerY="17.2"
+                android:gradientRadius="326.72"
                 android:type="radial">
 
                 <item
-                    android:color="@color/inverse_primary"
+                    android:color="#FF9DD49E"
                     android:offset="0" />
 
                 <item
-                    android:color="@color/primary"
-                    android:offset="0.6" />
+                    android:color="#FF36693D"
+                    android:offset="0.55" />
 
             </gradient>
 
@@ -29,63 +33,28 @@
 
     </path>
 
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M119.7,165.3h66.9c0,-4.3 1.5,-7.9 4.4,-10.8 3,-3 6.5,-4.4 10.8,-4.4v-30.4c-4.3,0 -7.9,-1.5 -10.8,-4.4 -3,-3 -4.4,-6.6 -4.4,-10.8h-67a15,15 0,0 1,-15.1 15.2L104.5,150a15,15 0,0 1,15.2 15.2ZM140.2,147.8c3.5,3.6 7.9,5.3 13,5.3 5,0 9.3,-1.7 12.9,-5.3 3.5,-3.5 5.3,-7.9 5.3,-13 0,-5 -1.8,-9.3 -5.3,-12.9a17.6,17.6 0,0 0,-13 -5.3c-5,0 -9.4,1.8 -12.9,5.3a17.6,17.6 0,0 0,-5.3 13c0,5 1.7,9.4 5.3,12.9Z">
+    <path android:pathData="M160.94,146.02c0,2.96 -0.71,5.63 -2.12,8a14.89,14.89 0,0 1,-6.14 5.54,9.77 9.77,0 0,1 -9.77,9.71h-1.04v-7.32h-0.65c-1.34,0 -2.61,-0.06 -3.8,-0.2v7.52L126.6,169.27v-10.4a27.03,27.03 0,0 1,-4.4 -2.6,20.49 20.49,0 0,1 -3,-2.66l1.8,-3.08a21.3,21.3 0,0 0,5.6 4.04v-12.18a16.84,16.84 0,0 1,-5.65 -5.6,14.78 14.78,0 0,1 -1.96,-7.6c0,-2.7 0.62,-5.15 1.85,-7.39a14.37,14.37 0,0 1,5.38 -5.54c0,-5.67 4.59,-10.26 10.26,-10.26h0.54v7.32h0.93c1.37,0 2.66,0.07 3.85,0.2L141.8,106h10.81v10.53a25.9,25.9 0,0 1,3.59 2.2c1.05,0.77 1.86,1.5 2.44,2.18l-1.84,3.08a18.8,18.8 0,0 0,-4.19 -3.15v11.97a16.08,16.08 0,0 1,6.2 5.4,13.85 13.85,0 0,1 2.12,7.8ZM140.94,117.62c-2.28,0 -4.03,0.46 -5.26,1.38a4.22,4.22 0,0 0,-1.8 3.62c0,1.19 0.46,2.24 1.36,3.15 0.9,0.87 2.63,1.73 5.16,2.6l1.41,0.48v-11.22h-0.86ZM137.41,157.3c2.14,0 3.75,-0.39 4.84,-1.16a3.8,3.8 0,0 0,1.63 -3.28c0,-2.47 -1.94,-4.38 -5.81,-5.75l-0.66,-0.27v10.46Z">
 
         <aapt:attr name="android:fillColor">
 
             <gradient
-                android:centerX="76.6"
-                android:centerY="96.3"
-                android:gradientRadius="165.08"
+                android:centerX="141.25"
+                android:centerY="168.94"
+                android:gradientRadius="63.27"
                 android:type="radial">
 
                 <item
-                    android:color="@color/inverse_primary"
+                    android:color="#FFB8F1B9"
                     android:offset="0" />
 
                 <item
-                    android:color="@color/primary"
-                    android:offset="0.6" />
+                    android:color="#FFD4E8D0"
+                    android:offset="1" />
 
             </gradient>
 
         </aapt:attr>
 
     </path>
-
-    <path
-        android:fillColor="@color/on_primary_container"
-        android:fillType="evenOdd"
-        android:pathData="M119.7,165.3h66.9c0,-4.3 1.5,-7.9 4.4,-10.8 3,-3 6.5,-4.4 10.8,-4.4v-30.4c-4.3,0 -7.9,-1.5 -10.8,-4.4 -3,-3 -4.4,-6.6 -4.4,-10.8h-67a15,15 0,0 1,-15.1 15.2L104.5,150a15,15 0,0 1,15.2 15.2ZM140.2,147.8c3.5,3.6 7.9,5.3 13,5.3 5,0 9.3,-1.7 12.9,-5.3 3.5,-3.5 5.3,-7.9 5.3,-13 0,-5 -1.8,-9.3 -5.3,-12.9a17.6,17.6 0,0 0,-13 -5.3c-5,0 -9.4,1.8 -12.9,5.3a17.6,17.6 0,0 0,-5.3 13c0,5 1.7,9.4 5.3,12.9Z" />
-
-    <path android:pathData="M104.5,174.4c-2.6,0 -4.7,-0.9 -6.5,-2.7a8.8,8.8 0,0 1,-2.7 -6.4v-51.7h-9V176c0,4.2 3.3,7.5 7.4,7.5h99v-9h-88.2Z">
-
-        <aapt:attr name="android:fillColor">
-
-            <gradient
-                android:centerX="76.6"
-                android:centerY="96.3"
-                android:gradientRadius="165.08"
-                android:type="radial">
-
-                <item
-                    android:color="@color/inverse_primary"
-                    android:offset="0" />
-
-                <item
-                    android:color="@color/primary"
-                    android:offset="0.6" />
-
-            </gradient>
-
-        </aapt:attr>
-
-    </path>
-
-    <path
-        android:fillColor="@color/on_primary_container"
-        android:pathData="M104.5,174.4c-2.6,0 -4.7,-0.9 -6.5,-2.7a8.8,8.8 0,0 1,-2.7 -6.4v-51.7h-9V176c0,4.2 3.3,7.5 7.4,7.5h99v-9h-88.2Z" />
 
 </vector>
