--- a/mobile/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/mobile/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -3,7 +3,14 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <path
-      android:pathData="M57,57a6,6 0,0 1,-4.3 -1.8A5.8,5.8 0,0 1,51 51c0,-1.7 0.6,-3 1.8,-4.3A5.8,5.8 0,0 1,57 45a6,6 0,0 1,4.3 1.8A5.8,5.8 0,0 1,63 51a6,6 0,0 1,-1.8 4.3A5.8,5.8 0,0 1,57 57ZM41,64c-0.8,0 -1.5,-0.3 -2.1,-0.9 -0.6,-0.6 -0.9,-1.3 -0.9,-2.1L38,41c0,-0.8 0.3,-1.5 0.9,-2.1 0.6,-0.6 1.3,-0.9 2.1,-0.9h32c0.8,0 1.5,0.3 2.1,0.9 0.6,0.6 0.9,1.3 0.9,2.1v20c0,0.8 -0.3,1.5 -0.9,2.1 -0.6,0.6 -1.3,0.9 -2.1,0.9L41,64ZM46,61h22c0,-1.4 0.5,-2.6 1.5,-3.5 1,-1 2.1,-1.5 3.5,-1.5L73,46c-1.4,0 -2.6,-0.5 -3.5,-1.5 -1,-1 -1.5,-2.1 -1.5,-3.5L46,41c0,1.4 -0.5,2.6 -1.5,3.5 -1,1 -2.1,1.5 -3.5,1.5v10c1.4,0 2.6,0.5 3.5,1.5 1,1 1.5,2.1 1.5,3.5ZM70,70L35,70c-0.8,0 -1.5,-0.3 -2.1,-0.9 -0.6,-0.6 -0.9,-1.3 -0.9,-2.1L32,44h3v23h35v3Z"
-      android:fillColor="#000"/>
+  <group>
+    <clip-path
+        android:pathData="M30,30h48v48H30z"/>
+    <path
+        android:pathData="M78,39.44h-3.56v16.33c0,7.18 -5.82,13 -13,13h-27v3.56H61c9.39,0 17,-7.61 17,-17V39.44Z"
+        android:fillColor="#000"/>
+    <path
+        android:pathData="M71.05,55c0,6.08 -4.92,11 -11,11L30,66L30,46c0,-6.07 4.93,-11 11,-11h30.05v20ZM50.03,40c-1.95,0 -3.54,1.59 -3.54,3.54 -0.81,0.49 -1.43,1.12 -1.86,1.91C44.21,46.22 44,47.07 44,48c0,0.98 0.23,1.85 0.67,2.62 0.45,0.76 1.1,1.4 1.95,1.94v4.2c-0.79,-0.41 -1.43,-0.87 -1.93,-1.39l-0.62,1.06c0.25,0.28 0.59,0.59 1.03,0.92 0.45,0.33 0.96,0.63 1.52,0.9v3.59h3.73v-2.6c0.41,0.05 0.85,0.07 1.31,0.07h0.22v2.53h0.36c1.85,0 3.36,-1.5 3.37,-3.35 0.92,-0.47 1.63,-1.11 2.12,-1.91 0.49,-0.82 0.73,-1.74 0.73,-2.76 -0,-1.05 -0.24,-1.95 -0.73,-2.69 -0.47,-0.74 -1.19,-1.36 -2.14,-1.86v-4.13c0.6,0.35 1.08,0.71 1.44,1.09l0.64,-1.06c-0.2,-0.24 -0.48,-0.49 -0.84,-0.75 -0.36,-0.27 -0.77,-0.52 -1.24,-0.76L55.6,40h-3.73v2.6c-0.41,-0.05 -0.86,-0.07 -1.33,-0.07h-0.32L50.22,40h-0.19ZM50.58,54.18c1.34,0.47 2,1.13 2,1.98 0,0.49 -0.19,0.87 -0.56,1.13 -0.37,0.27 -0.93,0.4 -1.67,0.4v-3.61l0.23,0.09ZM51.87,44.01v3.87l-0.49,-0.17c-0.87,-0.3 -1.47,-0.6 -1.78,-0.9 -0.31,-0.31 -0.47,-0.68 -0.47,-1.09 0,-0.53 0.21,-0.95 0.62,-1.25 0.42,-0.31 1.03,-0.47 1.82,-0.47h0.3Z"
+        android:fillColor="#000"/>
+  </group>
 </vector>
